# dhall-haskell

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .mergify.yml  .stylish-haskell.yaml  .travis-functions.sh  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Main.hs  README.md  appveyor.yaml  appveyor.yml  cabal.project  default.nix  dhall-kubernetes-generator.cabal  dhall.cabal  example.nix  flake.nix  megaparsec.nix  parser.html  release.nix  shared.nix  shell.nix  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-6.yaml  stack-nightly-2018-12-17.yaml  stack.ghc-8.10.yaml  stack.ghc-9.10.yaml  stack.ghc-9.2.yaml  stack.ghc-9.4.yaml  stack.ghc-9.6.yaml  stack.ghc-9.8.yaml  stack.yaml
dhall/: CHANGELOG.md  Main.hs  README.md  Setup.hs  default.nix  dhall.cabal  shell.nix
dhall-bash/: README.md  default.nix  dhall-bash.cabal  shell.nix  stack.yaml
dhall-bash/exec/: Main.hs
dhall-bash/src/Dhall/: Bash.hs
dhall-csv/: CHANGELOG.md  LICENSE  README.md  default.nix  dhall-csv.cabal  shell.nix
dhall-csv/csv-to-dhall/: Main.hs
dhall-csv/dhall-to-csv/: Main.hs
dhall-csv/src/Dhall/: CSV.hs  CSVToDhall.hs  Csv.hs  CsvToDhall.hs
dhall-csv/tasty/: Main.hs
dhall-csv/tasty/data/: .gitattributes
dhall-docs/: CHANGELOG.md  README.md  default.nix  dhall-docs.cabal  shell.nix
dhall-docs/dhall-docs/: Main.hs
dhall-docs/doctest/: Main.hs
dhall-docs/man/: dhall-docs.1  dhall-docs.md
dhall-docs/src/Dhall/: Docs.hs
dhall-docs/tasty/: Main.hs
dhall-json/: .gitignore  CHANGELOG.md  LICENSE.BSD3  LICENSE.GPLv3  README.md  default.nix  dhall-json.cabal  release.nix  shell.nix  stack.yaml
dhall-json-yaml-common/: LICENSE  dhall-json.cabal
dhall-json/dhall-to-json/: Main.hs
dhall-json/dhall-to-yaml/: Main.hs
dhall-json/dhall-to-yaml/Dhall/: Yaml.hs
dhall-json/examples/: bower.dhall  bower.json  bower.yaml  travis.dhall  travis.yml
dhall-json/java/: Utils.java
dhall-json/jsbits/: Dhall.Yaml.js
dhall-json/json-to-dhall/: Main.hs
dhall-json/src/Dhall/: JSON.hs  JSONToDhall.hs  Yaml.hs  YamlToDhall.hs
dhall-json/tasty/: Main.hs
dhall-json/tasty/data/: emptyAlternative.dhall  emptyAlternativeSchema.dhall  emptyList.dhall  emptyListSchema.dhall  emptyObject.dhall  emptyObjectStrongType.dhall  fromArbitraryJSON_12.0.0.dhall  fromArbitraryJSON_12.0.0.json  fromArbitraryJSON_12_0_0.dhall  fromArbitraryJSON_12_0_0Schema.dhall  fromArbitraryJSON_13.0.0.dhall  fromArbitraryJSON_13_0_0.dhall  fromArbitraryJSON_13_0_0.json  fromArbitraryJSON_13_0_0Schema.dhall  issue48.dhall  issue48.json  mismatchMessage.json  mismatchMessage0.golden  mismatchMessage2.json  mismatchMessage3Schema.dhall  missingKey.golden  missingKey.json  missingList.dhall  missingList.json  missingListSchema.dhall  nesting0.dhall  nesting1.dhall  nesting2.dhall  nesting2.json  nesting3.dhall  nesting3.json  nestingLegacy0.dhall  nestingLegacy0.json  nestingLegacy1.json  normal.dhall  normal.yaml  potpourri.dhall  potpourri.json  quoted.dhall  quoted.yaml  (+12 more)
dhall-json/yaml-to-dhall/: Main.hs
dhall-lsp-server/: ChangeLog.md  LICENSE  README.md  default.nix  dhall-lsp-server.cabal  package.yaml  shell.nix
dhall-lsp-server/app/: Main.hs
dhall-lsp-server/doctest/: Main.hs
dhall-lsp-server/src/: Prelude.hs  Util.hs
dhall-lsp-server/src/LSP/: Common.hs  Dispatcher.hs  Handlers.hs  Server.hs
dhall-lsp-server/test/: Driver.hs  Spec.hs
dhall-lsp-server/tests/: Main.hs
dhall-nix/: .travis.yml  LICENSE  README.md  default.nix  dhall-nix.cabal  dhall.nix  release.nix  shell.nix
dhall-nix/exec/: Main.hs
dhall-nix/nix/: QuickCheck.nix  base-compat.nix  base-orphans.nix  dhall-nix.nix  dhall.nix  hnix-store-core.nix  hnix.nix  lens.nix  megaparsec.nix  semigroupoids.nix
dhall-nix/src/Dhall/: Nix.hs
dhall-nixpkgs/: Main.hs  dhall-nixpkgs.cabal  shell.nix
dhall-openapi/: LICENSE  README.md  default.nix  dhall-kubernetes-generator.cabal  dhall-openapi.cabal  shell.nix
dhall-openapi/openapi-to-dhall/: Main.hs
dhall-openapi/src/: Main.hs
dhall-test-server/: README.md  dhall-test-server.cabal
dhall-test-server/cert/: cert.pem  key.pem
dhall-text/: README.md  cabal.project  default.nix  dhall-text.cabal  shell.nix  stack.yaml
dhall-text/exec/: Main.hs
dhall-toml/: CHANGELOG.md  LICENSE  README.md  default.nix  dhall-toml.cabal  shell.nix
dhall-toml/dhall-to-toml/: Main.hs
dhall-toml/doctest/: Main.hs
dhall-toml/src/Dhall/: DhallToToml.hs  TOML.hs  Toml.hs  TomlToDhall.hs
dhall-toml/tasty/: Main.hs
dhall-toml/tasty/data/: adjacent-tables-schema.dhall  adjacent-tables.dhall  adjacent-tables.toml  float-schema.dhall  float.dhall  float.toml  inline-list-schema.dhall  inline-list.dhall  inline-list.toml  map-complex-schema.dhall  map-complex.dhall  map-complex.toml  map-simple.dhall  multiple-fields-schema.dhall  multiple-fields.dhall  multiple-fields.toml  natural-schema.dhall  natural.dhall  natural.toml  nested-tables-schema.dhall  nested-tables.dhall  nested-tables.toml  optional-schema.dhall  optional.dhall  optional.toml  record-list-schema.dhall  record-list.dhall  record-list.toml  union-empty-schema.dhall  union-empty.dhall  union-empty.toml  union-nested.dhall  union-nested.toml  union-typed-schema.dhall  (+2 more)
dhall-toml/toml-to-dhall/: Main.hs
dhall-try/: LICENSE  README.md  default.nix  dhall-try.cabal  index.html  shell.nix
dhall-try/html/: index.html
dhall-try/src/: Main.hs
dhall-try/www/: index.html
dhall-yaml/: CHANGELOG.md  README.md  default.nix  dhall-yaml.cabal  release.nix  shell.nix
dhall-yaml/dhall-to-yaml-ng/: Main.hs
dhall-yaml/tasty/: Main.hs
dhall-yaml/yaml-to-dhall/: Main.hs
dhall/Prelude/: Monoid  package.dhall
dhall/dhall/: Main.hs
dhall/doctest/: Main.hs
dhall/examples/: to-directory-tree.dhall
dhall/man/: dhall.1  dhall.md  gen-manpage.sh
dhall/src/: Dhall.hs
dhall/tests/: Format.hs  Import.hs  Lint.hs  Normalization.hs  Parser.hs  QuickCheck.hs  Regression.hs  Tests.hs  Tutorial.hs  TypeCheck.hs  Util.hs  import  normalization  parser  typecheck
dhocs/: README.md  dhocs.cabal
dhocs/dhocs/: Main.hs
(+1091 files in other folders)
