Name: dhall
Version: 1.8.2
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 8.0.1
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: A configuration language guaranteed to terminate
Description:
    Dhall is an explicitly typed configuration language that is not Turing
    complete.  Despite being Turing incomplete, Dhall is a real programming
    language with a type-checker and evaluator.
    .
    Use this library to parse, type-check, evaluate, and pretty-print the Dhall
    configuration language.  This package also includes an executable which
    type-checks a Dhall file and reduces the file to a fully evaluated normal
    form.
    .
    Read "Dhall.Tutorial" to learn how to use this library
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    Prelude/Bool/and
    Prelude/Bool/build
    Prelude/Bool/even
    Prelude/Bool/fold
    Prelude/Bool/not
    Prelude/Bool/odd
    Prelude/Bool/or
    Prelude/Bool/show
    Prelude/Double/show
    Prelude/Integer/show
    Prelude/List/all
    Prelude/List/any
    Prelude/List/build
    Prelude/List/concat
    Prelude/List/concatMap
    Prelude/List/filter
    Prelude/List/fold
    Prelude/List/generate
    Prelude/List/head
    Prelude/List/indexed
    Prelude/List/iterate
    Prelude/List/last
    Prelude/List/length
    Prelude/List/map
    Prelude/List/null
    Prelude/List/replicate
    Prelude/List/reverse
    Prelude/List/shifted
    Prelude/List/unzip
    Prelude/Monoid
    Prelude/Natural/build
    Prelude/Natural/enumerate
    Prelude/Natural/even
    Prelude/Natural/fold
    Prelude/Natural/isZero
    Prelude/Natural/odd
    Prelude/Natural/product
    Prelude/Natural/show
    Prelude/Natural/sum
    Prelude/Natural/toInteger
    Prelude/Optional/all
    Prelude/Optional/any
    Prelude/Optional/build
    Prelude/Optional/concat
    Prelude/Optional/filter
    Prelude/Optional/fold
    Prelude/Optional/head
    Prelude/Optional/last
    Prelude/Optional/length
    Prelude/Optional/map
    Prelude/Optional/null
    Prelude/Optional/toList
    Prelude/Optional/unzip
    Prelude/Text/concat
    Prelude/Text/concatMap
    Prelude/Text/concatMapSep
    Prelude/Text/concatSep
    tests/parser/*.dhall
    tests/regression/*.dhall

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.9.0.0  && < 5   ,
        ansi-wl-pprint                      < 0.7 ,
        base16-bytestring                   < 0.2 ,
        bytestring                          < 0.11,
        case-insensitive                    < 1.3 ,
        charset                             < 0.4 ,
        containers           >= 0.5.0.0  && < 0.6 ,
        contravariant                       < 1.5 ,
        cryptohash                          < 0.12,
        exceptions           >= 0.8.3    && < 0.9 ,
        http-client          >= 0.4.30   && < 0.6 ,
        http-client-tls      >= 0.2.0    && < 0.4 ,
        lens                 >= 2.4      && < 4.16,
        parsers              >= 0.12.4   && < 0.13,
        prettyprinter        >= 1.1.1    && < 1.2 ,
        system-filepath      >= 0.3.1    && < 0.5 ,
        system-fileio        >= 0.2.1    && < 0.4 ,
        text                 >= 0.11.1.0 && < 1.3 ,
        text-format                         < 0.4 ,
        transformers         >= 0.2.0.0  && < 0.6 ,
        trifecta             >= 1.6      && < 1.8 ,
        unordered-containers >= 0.1.3.0  && < 0.3 ,
        vector               >= 0.11.0.0 && < 0.13
    Exposed-Modules:
        Dhall,
        Dhall.Context,
        Dhall.Core,
        Dhall.Import,
        Dhall.Parser,
        Dhall.Tutorial,
        Dhall.TypeCheck
    GHC-Options: -Wall

Executable dhall
    Hs-Source-Dirs: dhall
    Main-Is: Main.hs
    Build-Depends:
        base             >= 4        && < 5  ,
        dhall                                ,
        optparse-generic >= 1.1.1    && < 1.3,
        prettyprinter                        ,
        trifecta         >= 1.6      && < 1.8,
        text             >= 0.11.1.0 && < 1.3
    GHC-Options: -Wall
    Other-Modules:
        Paths_dhall

Executable dhall-format
    Hs-Source-Dirs: dhall-format
    Main-Is: Main.hs
    Build-Depends:
        base             >= 4        && < 5  ,
        dhall                                ,
        optparse-generic >= 1.1.1    && < 1.3,
        prettyprinter    >= 1.1.1    && < 1.2,
        system-filepath  >= 0.3.1    && < 0.5,
        trifecta         >= 1.6      && < 1.8,
        text             >= 0.11.1.0 && < 1.3
    GHC-Options: -Wall
    Other-Modules:
        Paths_dhall

Executable dhall-hash
    Hs-Source-Dirs: dhall-hash
    Main-Is: Main.hs
    Build-Depends:
        base             >= 4        && < 5  ,
        dhall                                ,
        optparse-generic >= 1.1.1    && < 1.3,
        trifecta         >= 1.6      && < 1.8,
        text             >= 0.11.1.0 && < 1.3

Test-Suite test
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tests
    Main-Is: Tests.hs
    GHC-Options: -Wall
    Other-Modules:
        Examples
        Normalization
        Parser
        Regression
        Tutorial
        Util
    Build-Depends:
        base               >= 4        && < 5   ,
        containers         >= 0.5.0.0  && < 0.6 ,
        dhall                                   ,
        tasty              >= 0.11.2   && < 0.13,
        tasty-hunit        >= 0.9.2    && < 0.11,
        text               >= 0.11.1.0 && < 1.3 ,
        vector             >= 0.11.0.0 && < 0.13
