Name: dhall
Version: 1.17.0
Cabal-Version: >=1.10
Build-Type: Simple
Tested-With: GHC == 8.0.1
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: A configuration language guaranteed to terminate
Description:
    Dhall is an explicitly typed configuration language that is not Turing
    complete.  Despite being Turing incomplete, Dhall is a real programming
    language with a type-checker and evaluator.
    .
    Use this library to parse, type-check, evaluate, and pretty-print the Dhall
    configuration language.  This package also includes an executable which
    type-checks a Dhall file and reduces the file to a fully evaluated normal
    form.
    .
    Read "Dhall.Tutorial" to learn how to use this library
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    Prelude/Bool/and
    Prelude/Bool/build
    Prelude/Bool/even
    Prelude/Bool/fold
    Prelude/Bool/not
    Prelude/Bool/odd
    Prelude/Bool/or
    Prelude/Bool/show
    Prelude/Double/show
    Prelude/Integer/show
    Prelude/Integer/toDouble
    Prelude/List/all
    Prelude/List/any
    Prelude/List/build
    Prelude/List/concat
    Prelude/List/concatMap
    Prelude/List/filter
    Prelude/List/fold
    Prelude/List/generate
    Prelude/List/head
    Prelude/List/indexed
    Prelude/List/iterate
    Prelude/List/last
    Prelude/List/length
    Prelude/List/map
    Prelude/List/null
    Prelude/List/replicate
    Prelude/List/reverse
    Prelude/List/shifted
    Prelude/List/unzip
    Prelude/Monoid
    Prelude/Natural/build
    Prelude/Natural/enumerate
    Prelude/Natural/even
    Prelude/Natural/fold
    Prelude/Natural/isZero
    Prelude/Natural/odd
    Prelude/Natural/product
    Prelude/Natural/show
    Prelude/Natural/sum
    Prelude/Natural/toDouble
    Prelude/Natural/toInteger
    Prelude/Optional/all
    Prelude/Optional/any
    Prelude/Optional/build
    Prelude/Optional/concat
    Prelude/Optional/filter
    Prelude/Optional/fold
    Prelude/Optional/head
    Prelude/Optional/last
    Prelude/Optional/length
    Prelude/Optional/map
    Prelude/Optional/null
    Prelude/Optional/toList
    Prelude/Optional/unzip
    Prelude/Text/concat
    Prelude/Text/concatMap
    Prelude/Text/concatMapSep
    Prelude/Text/concatSep
    tests/format/*.dhall
    tests/normalization/tutorial/combineTypes/*.dhall
    tests/normalization/tutorial/projection/*.dhall
    tests/normalization/*.dhall
    tests/normalization/examples/Bool/and/*.dhall
    tests/normalization/examples/Bool/build/*.dhall
    tests/normalization/examples/Bool/even/*.dhall
    tests/normalization/examples/Bool/fold/*.dhall
    tests/normalization/examples/Bool/not/*.dhall
    tests/normalization/examples/Bool/odd/*.dhall
    tests/normalization/examples/Bool/or/*.dhall
    tests/normalization/examples/Bool/show/*.dhall
    tests/normalization/examples/Double/show/*.dhall
    tests/normalization/examples/Integer/show/*.dhall
    tests/normalization/examples/Integer/toDouble/*.dhall
    tests/normalization/examples/List/all/*.dhall
    tests/normalization/examples/List/any/*.dhall
    tests/normalization/examples/List/build/*.dhall
    tests/normalization/examples/List/concat/*.dhall
    tests/normalization/examples/List/concatMap/*.dhall
    tests/normalization/examples/List/filter/*.dhall
    tests/normalization/examples/List/fold/*.dhall
    tests/normalization/examples/List/generate/*.dhall
    tests/normalization/examples/List/head/*.dhall
    tests/normalization/examples/List/indexed/*.dhall
    tests/normalization/examples/List/iterate/*.dhall
    tests/normalization/examples/List/last/*.dhall
    tests/normalization/examples/List/length/*.dhall
    tests/normalization/examples/List/map/*.dhall
    tests/normalization/examples/List/null/*.dhall
    tests/normalization/examples/List/replicate/*.dhall
    tests/normalization/examples/List/reverse/*.dhall
    tests/normalization/examples/List/shifted/*.dhall
    tests/normalization/examples/List/unzip/*.dhall
    tests/normalization/examples/Natural/build/*.dhall
    tests/normalization/examples/Natural/enumerate/*.dhall
    tests/normalization/examples/Natural/even/*.dhall
    tests/normalization/examples/Natural/fold/*.dhall
    tests/normalization/examples/Natural/isZero/*.dhall
    tests/normalization/examples/Natural/odd/*.dhall
    tests/normalization/examples/Natural/product/*.dhall
    tests/normalization/examples/Natural/show/*.dhall
    tests/normalization/examples/Natural/sum/*.dhall
    tests/normalization/examples/Natural/toDouble/*.dhall
    tests/normalization/examples/Natural/toInteger/*.dhall
    tests/normalization/examples/Optional/all/*.dhall
    tests/normalization/examples/Optional/any/*.dhall
    tests/normalization/examples/Optional/build/*.dhall
    tests/normalization/examples/Optional/concat/*.dhall
    tests/normalization/examples/Optional/filter/*.dhall
    tests/normalization/examples/Optional/fold/*.dhall
    tests/normalization/examples/Optional/head/*.dhall
    tests/normalization/examples/Optional/last/*.dhall
    tests/normalization/examples/Optional/length/*.dhall
    tests/normalization/examples/Optional/map/*.dhall
    tests/normalization/examples/Optional/null/*.dhall
    tests/normalization/examples/Optional/toList/*.dhall
    tests/normalization/examples/Optional/unzip/*.dhall
    tests/normalization/examples/Text/concat/*.dhall
    tests/normalization/examples/Text/concatMap/*.dhall
    tests/normalization/examples/Text/concatMapSep/*.dhall
    tests/normalization/examples/Text/concatSep/*.dhall
    tests/normalization/simplifications/*.dhall
    tests/parser/*.dhall
    tests/parser/failure/*.dhall
    tests/regression/*.dhall
    tests/tutorial/*.dhall
    tests/typecheck/*.dhall
    tests/typecheck/examples/Monoid/*.dhall
    tests/import/*.dhall
    tests/import/data/foo/bar/a.dhall
    benchmark/examples/*.dhall
    benchmark/deep-nested-large-record/*.dhall

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell

Flag with-http
  Description: Include support for importing dhall modules from HTTP URLs
  Default:     True
  Manual:      True

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                        >= 4.8.2.0  && < 5   ,
        ansi-terminal               >= 0.6.3.1  && < 0.9 ,
        bytestring                                 < 0.11,
        case-insensitive                           < 1.3 ,
        cborg                       >= 0.2.0.0  && < 0.3 ,
        containers                  >= 0.5.0.0  && < 0.6 ,
        contravariant                              < 1.6 ,
        cryptonite                  >= 0.23     && < 1.0 ,
        Diff                        >= 0.2      && < 0.4 ,
        directory                   >= 1.2.7.1  && < 1.4 ,
        exceptions                  >= 0.8.3    && < 0.11,
        filepath                    >= 1.4      && < 1.5 ,
        hashable                                   < 1.3 ,
        haskeline                   >= 0.7.3.0  && < 0.8 ,
        insert-ordered-containers   >= 0.2.1.0  && < 0.3 ,
        lens-family-core            >= 1.0.0    && < 1.3 ,
        megaparsec                  >= 6.1.1    && < 6.6 ,
        memory                      >= 0.14     && < 0.15,
        mtl                         >= 2.2.1    && < 2.3 ,
        optparse-applicative                       < 0.15,
        parsers                     >= 0.12.4   && < 0.13,
        prettyprinter               >= 1.2.0.1  && < 1.3 ,
        prettyprinter-ansi-terminal >= 1.1.1    && < 1.2 ,
        repline                     >= 0.1.6.0  && < 0.2 ,
        serialise                   >= 0.2.0.0  && < 0.3 ,
        scientific                  >= 0.3.0.0  && < 0.4 ,
        template-haskell                           < 2.14,
        text                        >= 0.11.1.0 && < 1.3 ,
        transformers                >= 0.2.0.0  && < 0.6 ,
        unordered-containers        >= 0.1.3.0  && < 0.3 ,
        vector                      >= 0.11.0.0 && < 0.13
    if flag(with-http)
      Build-Depends:
        http-client                 >= 0.4.30   && < 0.6 ,
        http-client-tls             >= 0.2.0    && < 0.4
    if !impl(ghc >= 8.0)
      Build-Depends: semigroups == 0.18.*
      Build-Depends: transformers == 0.4.2.*

    Exposed-Modules:
        Dhall,
        Dhall.Binary,
        Dhall.Context,
        Dhall.Core,
        Dhall.Diff,
        Dhall.Format,
        Dhall.Freeze,
        Dhall.Hash,
        Dhall.Import,
        Dhall.Lint,
        Dhall.Main
        Dhall.Parser,
        Dhall.Pretty,
        Dhall.Repl
        Dhall.TH,
        Dhall.Tutorial,
        Dhall.TypeCheck
    Other-Modules:
        Dhall.Pretty.Internal,
        Dhall.Parser.Expression,
        Dhall.Parser.Combinators,
        Dhall.Parser.Token,
        Dhall.Import.Types,
        Paths_dhall
    if flag(with-http)
      Other-Modules:
        Dhall.Import.HTTP

    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable dhall
    Hs-Source-Dirs: dhall
    Main-Is: Main.hs
    Build-Depends: base, dhall
    GHC-Options: -Wall
    Default-Language: Haskell2010

Test-Suite tasty
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tests
    Main-Is: Tests.hs
    GHC-Options: -Wall
    Other-Modules:
        Format
        Import
        Normalization
        Parser
        QuickCheck
        Regression
        Tutorial
        TypeCheck
        Util
    Build-Depends:
        base                      >= 4        && < 5   ,
        containers                                     ,
        deepseq                   >= 1.2.0.1  && < 1.5 ,
        dhall                                          ,
        hashable                                       ,
        insert-ordered-containers == 0.2.1.0           ,
        prettyprinter                                  ,
        QuickCheck                >= 2.10     && < 2.12,
        quickcheck-instances      >= 0.3.12   && < 0.4 ,
        serialise                                      ,
        tasty                     >= 0.11.2   && < 1.2 ,
        tasty-hunit               >= 0.9.2    && < 0.11,
        tasty-quickcheck          >= 0.9.2    && < 0.11,
        text                      >= 0.11.1.0 && < 1.3 ,
        transformers                                   ,
        vector                    >= 0.11.0.0 && < 0.13
    Default-Language: Haskell2010

Test-Suite doctest
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: doctest
    Main-Is: Main.hs
    GHC-Options: -Wall
    Build-Depends:
        base                          ,
        directory >= 1.2.2.0 && < 1.4 ,
        filepath                < 1.5 ,
        mockery                 < 0.4 ,
        doctest   >= 0.7.0   && < 0.17
    Default-Language: Haskell2010

Benchmark dhall-parser
    Type: exitcode-stdio-1.0
    Main-Is: benchmark/parser/Main.hs
    Build-Depends:
        base                      >= 4        && < 5  ,
        bytestring                                    ,
        containers                >= 0.5.0.0  && < 0.6,
        criterion                 >= 1.1      && < 1.6,
        dhall                                         ,
        directory                 >= 1.2.7.1  && < 1.4,
        serialise                                     ,
        text                      >= 0.11.1.0 && < 1.3
    Default-Language: Haskell2010

Benchmark deep-nested-large-record
    Type: exitcode-stdio-1.0
    Main-Is: benchmark/deep-nested-large-record/Main.hs
    Build-Depends:
        base                      >= 4        && < 5  ,
        containers                >= 0.5.0.0  && < 0.6,
        criterion                 >= 1.1      && < 1.6,
        dhall
    Default-Language: Haskell2010
