Name: dhall-bash
Version: 1.0.40
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Compile Dhall to Bash
Description:
    Use this package if you want to compile Dhall expressions to Bash.
    You can use this package as a library or an executable:
    .
    * See the "Dhall.Bash" module if you want to use this package as a library
    .
    * Use the @dhall-to-bash@ if you want an executable
    .
    The "Dhall.Bash" module also contains instructions for how to use this
    package
Category: Compiler
Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-bash

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                      >= 4.11.0.0 && < 5   ,
        bytestring                               < 0.12,
        containers                               < 0.7 ,
        dhall                     >= 1.41.0   && < 1.42,
        neat-interpolation                       < 0.6 ,
        shell-escape                             < 0.3 ,
        text                      >= 0.2      && < 2.1
    Exposed-Modules: Dhall.Bash
    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable dhall-to-bash
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Other-Modules:
        Paths_dhall_bash
    Build-Depends:
        base                                  ,
        bytestring                            ,
        dhall                                 ,
        dhall-bash                            ,
        optparse-generic >= 1.1.1    && < 1.5 ,
        text
    GHC-Options: -Wall
    Default-Language: Haskell2010
