Name: dhall-csv
Version: 1.0.2
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2021 Marcos Lerones
Author: Marcos Lerones
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Convert bidirectionally between Dhall and CSV files.
Description:
    Use this package if you want to convert between Dhall expressions and CSV.
    You can use this package as a library or an executable:
    .
    * See the "Dhall.Csv" or "Dhall.CsvToDhall" modules if you want to use
      this package as a library
    .
    * Use the @dhall-to-csv@ or @csv-to-dhall@ programs from
      this package if you want an executable
    .
    The "Dhall.Csv" and "Dhall.CsvToDhall" modules also contains instructions
    for how to use this package
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    README.md
Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-csv

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.12.0.0  && < 5   ,
        bytestring                           < 0.12,
        cassava              >= 0.5.0.0   && < 0.6 ,
        containers           >= 0.5.9     && < 0.7 ,
        either                                     ,
        exceptions           >= 0.8.3     && < 0.11,
        dhall                >= 1.39.0    && < 1.42,
        filepath                             < 1.5 ,
        optparse-applicative                       ,
        prettyprinter        >= 1.7.0     && < 1.8 ,
        text                 >= 0.11.1.0  && < 2.1 ,
        unordered-containers                 < 0.3 ,
        vector               >= 0.12      && < 0.13
    Exposed-Modules:
        Dhall.Csv
        Dhall.CsvToDhall
        Dhall.Csv.Util
    Other-Modules:
    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable dhall-to-csv
    Hs-Source-Dirs: dhall-to-csv
    Main-Is: Main.hs
    Build-Depends:
        ansi-terminal                                       ,
        base                                                ,
        bytestring                                          ,
        cassava                                             ,
        dhall                                               ,
        dhall-csv                                           ,
        optparse-applicative                                ,
        prettyprinter                                       ,
        prettyprinter-ansi-terminal    >= 1.1.1    && < 1.2 ,
        unordered-containers                                ,
        vector                                              ,
        text
    Other-Modules:
        Paths_dhall_csv
    GHC-Options: -Wall
    Default-Language: Haskell2010

Executable csv-to-dhall
    Hs-Source-Dirs: csv-to-dhall
    Main-Is: Main.hs
    Build-Depends:
        ansi-terminal                                       ,
        base                                                ,
        bytestring                                          ,
        cassava                                             ,
        dhall                                               ,
        dhall-csv                                           ,
        optparse-applicative                                ,
        prettyprinter                                       ,
        prettyprinter-ansi-terminal    >= 1.1.1    && < 1.2 ,
        unordered-containers                                ,
        vector                                              ,
        text
    Other-Modules:
        Paths_dhall_csv
    GHC-Options: -Wall
    Default-Language: Haskell2010

Test-Suite tasty
    Type:             exitcode-stdio-1.0
    Hs-Source-Dirs:   tasty
    Main-Is:          Main.hs
    Build-Depends:
        base                    ,
        bytestring              ,
        cassava                 ,
        dhall                   ,
        dhall-csv               ,
        filepath                ,
        tasty        <  1.5     ,
        tasty-silver <  3.4     ,
        tasty-hunit  >= 0.2     ,
        unordered-containers    ,
        text                    ,
        vector
    GHC-Options:      -Wall
    Default-Language: Haskell2010
